test/lexer/correct/cor_03_numbers_arithmetic.pl0
program numbers;
var x;
begin
  x := 123 + 456;
  x := 100 - 50;
  x := 10 * 10;
  x := 100 / 10;
  x := (1 + 2) * 3;
end
