test/lexer/error/err_13_invalid_assign_2.pl0
var x; begin x : 10 end